[infra-proxy-service] iam projects mapping
