# api/external/infra_proxy/infra_proxy.swagger.json
@@ -486,6 +486,12 @@
         },
         "server_id": {
           "type": "string"
+        },
+        "projects": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -523,6 +529,12 @@
         },
         "server_id": {
           "type": "string"
+        },
+        "projects": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -838,6 +850,12 @@
         },
         "server_id": {
           "type": "string"
+        },
+        "projects": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
